--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,59 +4,75 @@ body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input
 
 
 
-html,body{
-margin:0;
-padding:0;
-font-family: 'Lato', sans-serif;
-background: #fff url(../images/bg.jpg) center top no-repeat;
+html{
 }
 
+
+body{
+		background:#D8D7D2 url(../images/bg.png) repeat top left;
+		font:13px/20px 'Droid Sans', Arial, sans-serif;
+		font-weight:300;
+		color:#555;
+	}
+
+#header {
+    padding-top: 40px;
+    position: relative;
+    z-index: 10;
+}
+
+#headerlogo{
+	background: url(../images/logo.png) no-repeat top left;
+	width: 400px;
+	height: 80px;
+
+}
+
+#headerimage{
+	background: url(../images/header.png) no-repeat top left;
+	width: 120%;
+	height: 180px;
+	left: -60px;
+	position: relative;
+}
 
 #wrapper{
-max-width: 100%;
-width: 940px;
-margin: 0 auto;
+    background-color: #ffffff;
+    border-top: 10px solid #f9f9f9;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    margin: 50px auto;
+    padding: 0 60px;
+    min-width: 480px;
+    max-width: 880px;
+  	color: #000;
+
 }
 
-.main{
-max-width: 100%;
-width: 940px;
-float: left;
-}
-
-.header, .content, .bottom, .sep2{
-width: 100%;
-float: left;
-}
-
-
-
-.header{
-	margin-top: 160px;
-	margin-bottom: 40px;
-}
 
 
 h1{
 font-family: 'Open Sans', sans-serif;
-color: #fff;
+color: #000;
 text-align: center;
 font-size: 50px;
 font-weight: 300;
-margin: 0 0 10px 0;
+margin: 10px 0 20px 0;
 }
 
 
 h1 strong{
 font-size: 38px;
 font-weight: 700;
+margin: 0 0 0 0;
+min-width: 400px;
+text-align: center;
 }
 
 h2{
 	text-align: center;
 	font-weight: 300;
 	font-size: 20px;
-		color: #ffffff;
+	color: #000000;
 
 }
 
@@ -67,9 +83,11 @@ h2 strong{
 
 
 .information{
-width: 480px;
+width: 80%;
 padding-top: 35px;
-margin: 0 auto;
+margin: auto;
+height: 100px;
+
 }
 
 h3{
@@ -78,16 +96,15 @@ font-weight: 600;
 color: #ffffff;
 }
 
-.information p{
-font-size: 16px;
-color: #ffffff;
-display: block;
+.content{
+	padding-top: 15px;
+	margin: auto;
+	text-align: center;
+	font-size: 16px;	
 }
-
 .form{
-	float: left;
 	width: 478px;
-	margin-top: 20px;
+	margin: auto;
 }
 
 .field{
