--- a/views/index.jade
+++ b/views/index.jade
@@ -4,22 +4,25 @@ html
     meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     title Join the #{community} community on Slack!
+    link(href="http://recsys.acm.org/wp-content/themes/primo-wp/favicon.ico", rel="shortcut icon", type="image/x-icon")
     link(href="css/style.css", rel="stylesheet", type="text/css")
     link(href="http://fonts.googleapis.com/css?family=Lato:300,400,700,900,700italic|Open+Sans:700italic,400,600,300,700,800", rel="stylesheet", type="text/css")
   body
     #wrapper
-      .main
-        .header
-          h1
-            strong #{community}
-          h2 Enter your email below to join #{community} on slack!
-        .content
-          .information
-            form(method="POST", action="/invite")#join-form.form
-              input(type="text", name="email", placeholder="Enter Your Email Address")#slack-email.field
-              if tokenRequired
-                input(type="text", name="token", placeholder="Enter the invite token you were given")#slack-token.field
-              input(type="submit", value="Join").submit
+      #header
+        #headerlogo
+      #headerimage
+      h1
+        strong #{community}
+      h2 Enter your email below to join #{community} on slack!
+      .content
+        After submitting the form, you will receive an email with instructions.
+        .information
+          form(method="POST", action="/invite")#join-form.form
+            input(type="text", name="email", placeholder="Enter Your Email Address")#slack-email.field
+            if tokenRequired
+              input(type="text", name="token", placeholder="Enter the invite token you were given")#slack-token.field
+            input(type="submit", value="Join").submit
     script.
       var tokenRequired = #{tokenRequired};
       var form = document.getElementById('join-form');
